Updated bash scripts.